external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:3:11
  │
3 │         0 {} = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:3:11
  │
3 │         0 {} = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

